--- a/_config.yml
+++ b/_config.yml
@@ -11,15 +11,15 @@ github_repo: "https://github.com/ckarying/ckarying.github.io.git" # you code rep
 
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
-sidebar-about-description: "Goals determine what you going to be!"
-sidebar-avatar: /img/about-BY-gentle.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
+sidebar-about-description: "Doing is better than saying."
+#sidebar-avatar: /img/about-BY-gentle.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
 
 
 
 # SNS settings
 RSS: false
 # weibo_username:     
-#zhihu_username:     qiubaiying
+zhihu_username:     chen-kang-rui-10
 github_username:    ckarying
 #facebook_username:  baiying.qiu.7
 #jianshu_username:   e71990ada2fd
