--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
-title: BY Blog
-SEOTitle: Sylar's Blog | BY Blog
+title: Sylar Blog
+SEOTitle: Sylar Blog
 header-img: img/post-bg-desk.jpg
 email: ckarying@gmail.com
 description: "Every failure is leading towards success."
