--- a/_config.yml
+++ b/_config.yml
@@ -49,7 +49,7 @@ kramdown:
 
 # Gitalk
 gitalk:
-  enable: true    #是否开启Gitalk评论
+  enable: false    #是否开启Gitalk评论
   clientID: 5ed17e0b3432bbf62719   #生成的clientID
   clientSecret: 95ba0fac60330aa97618ccb158faafaf74b2ac37  #同上
   repo: ckarying.github.io    #仓库名称
