--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
-title: Sylar Blog
-SEOTitle: Sylar Blog
+title: BY Blog
+SEOTitle: Sylar's Blog | BY Blog
 header-img: img/post-bg-desk.jpg
 email: ckarying@gmail.com
 description: "Every failure is leading towards success."
@@ -11,17 +11,22 @@ github_repo: "https://github.com/ckarying/ckarying.github.io.git" # you code rep
 
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
-sidebar-about-description: "Doing is better than saying."
-#sidebar-avatar: /img/about-BY-gentle.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
+sidebar-about-description: "Goals determine what you going to be!"
+sidebar-avatar: /img/about-BY-gentle.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
+
+
 
 # SNS settings
 RSS: false
-weibo_username: 1946396480
-zhihu_username:     chen-kang-rui-10
+# weibo_username:     
+#zhihu_username:     qiubaiying
 github_username:    ckarying
 #facebook_username:  baiying.qiu.7
 #jianshu_username:   e71990ada2fd
 #twitter_username:   qiubaiying
+
+
+
 
 # Build settings
 # from 2016, 'pygments' is unsupported on GitHub Pages. Use 'rouge' for highlighting instead.
@@ -30,9 +35,14 @@ paginate: 10
 exclude: ["less","node_modules","Gruntfile.js","package.json","README.md"]
 anchorjs: true                          # if you want to customize anchor. check out line:181 of `post.html`
 
+
+
 # Gems
 # from PR#40, to support local preview for Jekyll 3.0
 gems: [jekyll-paginate]
+
+
+
 
 # Markdown settings
 # replace redcarpet to kramdown,
@@ -43,18 +53,20 @@ highlighter: rouge
 kramdown:
   input: GFM                            # use Github Flavored Markdown !important
 
+
+
 # 评论系统
 # Disqus（https://disqus.com/）
 # disqus_username: qiubaiying
 
 # Gitalk
 gitalk:
-  enable: false    #是否开启Gitalk评论
-  clientID: 5ed17e0b3432bbf62719   #生成的clientID
-  clientSecret: 95ba0fac60330aa97618ccb158faafaf74b2ac37  #同上
-  repo: ckarying.github.io    #仓库名称
-  owner: ckarying    #github用户名
-  admin: ckarying
+  enable: true    #是否开启Gitalk评论
+  clientID: f2c84e7629bb1446c1a4   #生成的clientID
+  clientSecret: ca6d6139d1e1b8c43f8b2e19492ddcac8b322d0d  #同上
+  repo: qiubaiying.github.io    #仓库名称
+  owner: qiubaiying    #github用户名
+  admin: qiubaiying
   distractionFreeMode: true #是否启用类似FB的阴影遮罩
 
 
@@ -68,13 +80,21 @@ ba_track_id: b50bf2b12b5338a1845e33832976fd68
 ga_track_id: 'UA-90855596-1'            # Format: UA-xxxxxx-xx
 ga_domain: qiubaiying.top               # 默认的是 auto, 这里我是自定义了的域名，你如果没有自己的域名，需要改成auto
 
+
+
+
+
 # Featured Tags
 featured-tags: true                     # 是否使用首页标签
-featured-condition-size: 0              # 相同标签数量大于这个数，才会出现在首页
+featured-condition-size: 1              # 相同标签数量大于这个数，才会出现在首页
+
+
 
 # Progressive Web Apps
 chrome-tab-theme-color: "#000000"
 service-worker: true
+
+
 
 # Friends
 friends: [
